--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@google-cloud/datastore": "^3.1.1",
     "boom": "^7.3.0",
     "envalid": "^4.2.2",
+    "express": "^4.16.4",
     "node-fetch": "^2.3.0",
     "request": "^2.83.0",
     "uuid": "^3.3.2"
